--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.14.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "json-server": "^0.17.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
